bug fixes and function generalization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="btnaddtext">+</string>
     <string name="btncetext">CE</string>
     <string name="btnequaltext">=</string>
-    <string name="btndeltext">Del</string>
+    <string name="btndeltext">DEL</string>
     <string name="txtdisplaytext"></string>
 
 
