added actionbar icon to top right corner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="btnequaltext">=</string>
     <string name="btndeltext">DEL</string>
     <string name="txtdisplaytext"></string>
+    <string name="mainactionbaricontext">CODEFEST</string>
 
 
 </resources>
